@@ -1,0 +1,6 @@
+{
+  "name": "Die Nacht von Freitag auf Montag",
+  "language": "DE",
+  "lyrics": "Wo war ich in der Nacht\nVon Freitag auf Montag\nWar ich drei, fünf Tage wach\nOder einfach am Koma\nUnd ich denk mir so \'ne Scheiße\nIch bin splitternackt und pleite\nSag mir wo war ich in der Nacht\nVon Freitag auf Montag\nIch wache auf, es fühlt sich an als ob mein Kopf explodiert\nMeine Kumpels hatten Spaß ich bin komplett dekoriert\nUnd ich schaue in den Spiegel was ist eigentlich passiert\nDenn über\'m Arsch hab ich ein Arschgeweih tätowiert\nBesoffen Autofahren is doch okay wenn man sich anschnallt\nDachte ich doch jetzt brauch ich glaub ich \'n juten anwalt\nMeine Nase ist gebrochen, mann wie schmerzhaft das ist\nTja, der Türsteher war anscheinend stärker als ich\nUnd die Olle neben mir, die sieht aus wie Thomas Gottschalk\nWie hab ich mir die denn schön gesoffen, mann ich kotz bald\nMann, ich trink nie wieder, auf jeden Fall \'ne Zeit lang\nNaja okay auf jeden Fall bis nächsten Freitag\nWo war ich in der Nacht\nVon Freitag auf Montag\nWar ich drei, fünf Tage wach\nOder einfach am Koma\nUnd ich denk mir so \'ne Scheiße\nIch bin splitternackt und pleite\nSag mir wo war ich in der Nacht\nVon Freitag auf Montag\nIch mach ein Auge auf, das andre geht nicht auf\nAlles dreht sich und ich glaub mein Bett bewegt sich auch\nErstmal steh ich auf, doch das geht nicht, au\nEy man was soll das, da guckt ein Katheterschlauch aus meinem Penis raus\nVerdammt wo bin ich und warum bin ich stinkbesoffen\nWarum trag ich dieses blöde Kleid mit hinten offen\nWarum fühlt mein Kopf sich an als ob ein Block dagegen knallt\nIch geh zum Spiegel, oh mein Gott, ich hab \'n B am Hals\nDieses Gesaufe is\' nich gut für meine Leber klar doch\nJetzt hab ich \'ne große Narbe da wo meine Leber war\nEgal sie können die Leber haben\nDann muss ich weniger tragen\nMacht mir nichts ist ganz okay doch bitte kann mir jemand sagen\nWo war ich in der Nacht\nVon Freitag auf Montag\nWar ich drei, fünf Tage wach\nOder einfach am Koma\nUnd ich denk mir so \'ne Scheiße\nIch bin splitternackt und pleite\nSag mir wo war ich in der Nacht\nVon Freitag auf Montag\nSorry, ich war noch nie so drauf wie auf der Party\nIch könnte das nich wissen mann, ich dachte das sind Smarties\nIch kenn beim Feiern kein erbamen, ich trink den Jägermeister warm\nWar\'n das Letzte was ich weiß, is wie man mich nach draußen schleift\nIch checke Facebook was is bloß passiert\nScheiße ich würde auf hundert dreißig fotos markiert\nUnd eines dieser Fotos zeigt mich kriechend am Ku\'damm\nEines zeigt mich nackt am Potsdammer Platz\nErschreckend find ich das mit mir am Steuer einer U-Bahn\nScheiße man ich krieg nie mehr \'nen Job in dieser Stadt\nUnd ich würd\' sagen ich nehm\' keine Drogen mehr\nWenn das nich gelogen wär\nWo war ich in der Nacht\nVon Freitag auf Montag\nWar ich drei, fünf Tage wach\nOder einfach am Koma\nUnd ich denk mir so \'ne Scheiße\nIch bin splitternackt und pleite\nSag mir wo war ich in der Nacht\nVon Freitag auf Montag",
+  "chords": "G, D, Am, C"
+}
