@@ -1,2 +1,3 @@
 New in this version
 - Die immer lacht
+- Die Nacht von Freitag auf Montag
