@@ -1,2 +1,3 @@
 Neu in dieser Version
 - Die immer lacht
+- Die Nacht von Freitag auf Montag
